@@ -14,6 +14,8 @@ Bugs fixed
   that contains regular-expression like string
 * #1565: Show warning if Pygments throws an ErrorToken
 * #2211: Fix paragraphs in table cell doesn't work in Latex output
+* #2253: ``:pyobject:`` option of ``literalinclude`` directive can't detect indented
+  body block when the block starts with blank or comment lines.
 
 Release 1.3.4 (released Jan 12, 2016)
 =====================================
